# C-Projekt2_Biblioteka

./: Biblioteka.h  CMakeLists.txt  Konta.h  Projekt_2.cpp  Projekt_2.h  RandomGenerator.h
